# Mango

./: .env.example  .gitignore  README.md  go.work  package.json  tsconfig.base.json
.github/workflows/: ci.yml  load-smoke.yml
apps/web/: next.config.ts  package.json  pnpm-lock.yaml
apps/web/public/: sw.js
docs/operations/: postmortem-template.md  slo-sla-baseline.md
docs/runbooks/: on-call.md  top-10-failures.md
infra/: docker-compose.yml  livekit.yaml
infra/observability/: README.md  grafana-dashboard-api-gateway.json  prometheus-alerts.yml
scripts/: bootstrap.ts  dev-lite.ts  dev.ts  lint.ts  test.ts  utils.ts
services/api-gateway/: package.json
services/api-gateway/migrations/: 001_init.sql  003_reactions.sql  004_identity_social_invites.sql  007_release2_scale.sql  (+2 more)
services/community-service/: package.json
services/identity-service/: package.json
services/media-service/: package.json
services/messaging-service/: package.json
services/presence-service/: go.mod  main.go
services/realtime-gateway/: config.go  go.mod  hub.go  main.go  server.go
services/voice-signaling/: go.mod  main.go
tests/contract/: api-message.contract.test.ts
tests/e2e/: chat-flow.e2e.ts
tests/load/: api-gateway.http-load.ts  realtime-gateway.ws-load.ts
workers/moderation-worker/: README.md  pyproject.toml
workers/moderation-worker/src/moderation_worker/: __init__.py  __main__.py  api_client.py  config.py  models.py  scoring.py  worker.py
workers/moderation-worker/tests/: test_scoring.py
workers/notification-worker/: package.json
(+138 files in other folders)
