[project]
name = "mango-moderation-worker"
version = "0.1.0"
description = "Moderation worker scaffold for Mango."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
moderation-worker = "moderation_worker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moderation_worker"]
